force-app/main/default/objects/Asignacion_constancia__c/Asignacion_constancia__c.object-meta.xml
<CustomObject>
    <label>Asignación de constancia</label>
    <nameField>
        <displayFormat>CC-{0000000}</displayFormat>
        <label>Correlativo</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Asignación de constancias</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>