force-app/main/default/objects/Asignacion_constancia__c/fields/Carta__c.field-meta.xml
<CustomField>
    <fullName>Carta__c</fullName>
    <label>Constancia</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Constancia</valueSetName>
    </valueSet>
</CustomField>