force-app/main/default/objects/Asignacion_constancia__c/fields/Constancia__c.field-meta.xml
<CustomField>
    <fullName>Constancia__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Constancia</label>
    <referenceTo>Constancia__c</referenceTo>
    <relationshipLabel>Asignación de constancias</relationshipLabel>
    <relationshipName>Asignacion_constancias</relationshipName>
    <type>Lookup</type>
</CustomField>