force-app/main/default/objects/Asignacion_constancia__c/fields/FPC_TipoPersona__c.field-meta.xml
<CustomField>
    <fullName>FPC_TipoPersona__c</fullName>
    <label>Tipo de Persona</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Titular</fullName>
            </value>
            <value>
                <fullName>Tercero</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>