force-app/main/default/objects/Asignacion_constancia__c/fields/Tipo_registro_Caso__c.field-meta.xml
<CustomField>
    <fullName>Tipo_registro_Caso__c</fullName>
    <label>Tipo de registro de Caso</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Tipo_registro_Caso</valueSetName>
    </valueSet>
</CustomField>