force-app/main/default/objects/Asignacion_constancia__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Tipo_registro_Caso__c</columns>
    <columns>Carta__c</columns>
    <columns>Constancia__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>